--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "[307511 rows x 122 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -554,14 +554,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/q8/mqm68gfx7pjfpqftf7y_v6140000gn/T/ipykernel_36060/2858267187.py:4: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "/var/folders/q8/mqm68gfx7pjfpqftf7y_v6140000gn/T/ipykernel_43622/2858267187.py:4: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  df.drop(df.columns.difference(['SK_ID_CURR', 'TARGET', 'NAME_CONTRACT_TYPE', 'CODE_GENDER', 'FLAG_OWN_CAR', 'FLAG_OWN_REALTY', 'AMT_INCOME_TOTAL', 'AMT_CREDIT', 'AMT_ANNUITY', 'NAME_EDUCATION_TYPE', 'NAME_FAMILY_STATUS', 'NAME_HOUSING_TYPE', 'CNT_CHILDREN', 'DAYS_BIRTH', 'DAYS_EMPLOYED', 'REGION_POPULATION_RELATIVE', 'DAYS_REGISTRATION']), 1, inplace=True)\n"
      ]
     },
@@ -740,7 +740,7 @@
        "4                    0.028663      -19932          -3038            -4311.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,9 +756,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/q8/mqm68gfx7pjfpqftf7y_v6140000gn/T/ipykernel_43622/582163748.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "  df.drop('DAYS_BIRTH', 1, inplace=True)\n",
+      "/var/folders/q8/mqm68gfx7pjfpqftf7y_v6140000gn/T/ipykernel_43622/582163748.py:4: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "  df.drop('DAYS_EMPLOYED', 1, inplace=True)\n",
+      "/var/folders/q8/mqm68gfx7pjfpqftf7y_v6140000gn/T/ipykernel_43622/582163748.py:6: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "  df.drop('DAYS_REGISTRATION', 1, inplace=True)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -794,9 +806,9 @@
        "      <th>NAME_FAMILY_STATUS</th>\n",
        "      <th>NAME_HOUSING_TYPE</th>\n",
        "      <th>REGION_POPULATION_RELATIVE</th>\n",
-       "      <th>DAYS_BIRTH</th>\n",
-       "      <th>DAYS_EMPLOYED</th>\n",
-       "      <th>DAYS_REGISTRATION</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>YEARS_EMPLOYED</th>\n",
+       "      <th>YEARS REGISTERED</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -816,9 +828,9 @@
        "      <td>Single / not married</td>\n",
        "      <td>House / apartment</td>\n",
        "      <td>0.018801</td>\n",
-       "      <td>25.920548</td>\n",
-       "      <td>1.745205</td>\n",
-       "      <td>9.994521</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>9.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -836,9 +848,9 @@
        "      <td>Married</td>\n",
        "      <td>House / apartment</td>\n",
        "      <td>0.003541</td>\n",
-       "      <td>45.931507</td>\n",
-       "      <td>3.254795</td>\n",
-       "      <td>3.249315</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>3.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -856,9 +868,9 @@
        "      <td>Single / not married</td>\n",
        "      <td>House / apartment</td>\n",
        "      <td>0.010032</td>\n",
-       "      <td>52.180822</td>\n",
-       "      <td>0.616438</td>\n",
-       "      <td>11.671233</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>11.67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -876,9 +888,9 @@
        "      <td>Civil marriage</td>\n",
        "      <td>House / apartment</td>\n",
        "      <td>0.008019</td>\n",
-       "      <td>52.068493</td>\n",
-       "      <td>8.326027</td>\n",
-       "      <td>26.939726</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>8.33</td>\n",
+       "      <td>26.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -896,9 +908,9 @@
        "      <td>Single / not married</td>\n",
        "      <td>House / apartment</td>\n",
        "      <td>0.028663</td>\n",
-       "      <td>54.608219</td>\n",
-       "      <td>8.323288</td>\n",
-       "      <td>11.810959</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>8.32</td>\n",
+       "      <td>11.81</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -926,35 +938,32 @@
        "3  Secondary / secondary special        Civil marriage  House / apartment   \n",
        "4  Secondary / secondary special  Single / not married  House / apartment   \n",
        "\n",
-       "   REGION_POPULATION_RELATIVE  DAYS_BIRTH  DAYS_EMPLOYED  DAYS_REGISTRATION  \n",
-       "0                    0.018801   25.920548       1.745205           9.994521  \n",
-       "1                    0.003541   45.931507       3.254795           3.249315  \n",
-       "2                    0.010032   52.180822       0.616438          11.671233  \n",
-       "3                    0.008019   52.068493       8.326027          26.939726  \n",
-       "4                    0.028663   54.608219       8.323288          11.810959  "
+       "   REGION_POPULATION_RELATIVE   AGE  YEARS_EMPLOYED  YEARS REGISTERED  \n",
+       "0                    0.018801  26.0            1.75              9.99  \n",
+       "1                    0.003541  46.0            3.25              3.25  \n",
+       "2                    0.010032  52.0            0.62             11.67  \n",
+       "3                    0.008019  52.0            8.33             26.94  \n",
+       "4                    0.028663  55.0            8.32             11.81  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 20,application_{train|test}.csv,DAYS_BIRTH,Client's age in days at the time of application,time only relative to the application\n",
-    "# 21,application_{train|test}.csv,DAYS_EMPLOYED,How many days before the application the person started current employment,time only relative to the application\n",
-    "# 22,application_{train|test}.csv,DAYS_REGISTRATION,How many days before the application did client change his registration,time only relative to the application\n",
-    "\n",
-    "# convert days to years\n",
-    "df['DAYS_BIRTH'] = df['DAYS_BIRTH'] / -365\n",
-    "df['DAYS_EMPLOYED'] = df['DAYS_EMPLOYED'] / -365\n",
-    "df['DAYS_REGISTRATION'] = df['DAYS_REGISTRATION'] / -365\n",
-    "\n",
+    "df[\"AGE\"] = round((-1 * df[\"DAYS_BIRTH\"]) / 365, 0)\n",
+    "df.drop('DAYS_BIRTH', 1, inplace=True)\n",
+    "df[\"YEARS_EMPLOYED\"] = round((-1 * df[\"DAYS_EMPLOYED\"]) / 365, 2)\n",
+    "df.drop('DAYS_EMPLOYED', 1, inplace=True)\n",
+    "df[\"YEARS REGISTERED\"] = round((-1 * df[\"DAYS_REGISTRATION\"]) / 365, 2)\n",
+    "df.drop('DAYS_REGISTRATION', 1, inplace=True)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
